Updated data cleaning

--- a/healthcare_data_cleaning.ipynb
+++ b/healthcare_data_cleaning.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cleaned data already saved to healthcare_dataset_cleaned.csv. If you find more cleaning that needs to happen, add it here and rerun.\n",
     "\n",
     "df_healthcare = pd.read_csv(\"healthcare_dataset.csv\")\n",
-    "df_healthcare.head(8000)\n",
-    "df_healthcare.loc[:, 'Name'] = df_healthcare['Name'].str.title()\n",
-    "df_healthcare.loc[:, 'Billing Amount'] = df_healthcare['Billing Amount'].round(0)\n",
-    "df_healthcare['Duration of Stay'] = pd.to_datetime(df_healthcare['Discharge Date']) - pd.to_datetime(df_healthcare['Date of Admission'])\n",
-    "df_healthcare.to_csv('healthcare_dataset_cleaned.csv', index = False)\n"
+    "df_healthcare_reduced = df_healthcare.head(8000)\n",
+    "df_healthcare_reduced.loc[:, 'Name'] = df_healthcare_reduced['Name'].str.title()\n",
+    "df_healthcare_reduced.loc[:, 'Billing Amount'] = df_healthcare_reduced['Billing Amount'].round(0)\n",
+    "df_healthcare_reduced = df_healthcare_reduced.copy()\n",
+    "df_healthcare_reduced.loc[:, 'Duration of Stay'] = pd.to_datetime(df_healthcare_reduced['Discharge Date']) - pd.to_datetime(df_healthcare_reduced['Date of Admission'])\n",
+    "df_healthcare_reduced.to_csv('healthcare_dataset_cleaned.csv', index = False)\n"
    ]
   }
  ],
