Changed duration of stay type to int

--- a/healthcare_data_cleaning.ipynb
+++ b/healthcare_data_cleaning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "df_healthcare_reduced.loc[:, 'Name'] = df_healthcare_reduced['Name'].str.title()\n",
     "df_healthcare_reduced.loc[:, 'Billing Amount'] = df_healthcare_reduced['Billing Amount'].round(0)\n",
     "df_healthcare_reduced = df_healthcare_reduced.copy()\n",
-    "df_healthcare_reduced.loc[:, 'Duration of Stay'] = pd.to_datetime(df_healthcare_reduced['Discharge Date']) - pd.to_datetime(df_healthcare_reduced['Date of Admission'])\n",
+    "df_healthcare_reduced.loc[:, 'Duration of Stay'] = (pd.to_datetime(df_healthcare_reduced['Discharge Date']) - pd.to_datetime(df_healthcare_reduced['Date of Admission'])).dt.days\n",
     "df_healthcare_reduced.to_csv('healthcare_dataset_cleaned.csv', index = False)\n"
    ]
   }
