--- a/april_visuals.ipynb
+++ b/april_visuals.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\april\\AppData\\Local\\Temp\\ipykernel_54956\\1182774095.py:14: FutureWarning:\n",
-      "\n",
-      "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "\n"
+      "/var/folders/0p/dk8trws57lsg771k9ktt6kh80000gn/T/ipykernel_18785/2650201601.py:14: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  agg_df = df.groupby(['age_group', 'Gender']).agg(\n"
      ]
     },
     {
@@ -20,23 +18,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3621793bd7dd43cf81ea68ce065919e1.vega-embed {\n",
+       "  #altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3621793bd7dd43cf81ea68ce065919e1.vega-embed details,\n",
-       "  #altair-viz-3621793bd7dd43cf81ea68ce065919e1.vega-embed details summary {\n",
+       "  #altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6.vega-embed details,\n",
+       "  #altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3621793bd7dd43cf81ea68ce065919e1\"></div>\n",
+       "<div id=\"altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3621793bd7dd43cf81ea68ce065919e1\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3621793bd7dd43cf81ea68ce065919e1\");\n",
+       "    if (outputDiv.id !== \"altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -84,7 +82,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-4790c14dd44754b8bbf699bc6eb67f92\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"field\": \"Gender\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"age_group\", \"title\": \"Age Group\", \"type\": \"nominal\"}, {\"field\": \"Gender\", \"type\": \"nominal\"}, {\"field\": \"count\", \"title\": \"Number of Patients\", \"type\": \"quantitative\"}, {\"field\": \"avg_duration\", \"title\": \"Avg. Duration of Stay\", \"type\": \"quantitative\"}], \"x\": {\"axis\": {\"labelAngle\": 0}, \"field\": \"age_group\", \"title\": \"Age Group\", \"type\": \"nominal\"}, \"xOffset\": {\"field\": \"Gender\", \"type\": \"nominal\"}, \"y\": {\"field\": \"count\", \"scale\": {\"zero\": true}, \"title\": \"Number of Patients\", \"type\": \"quantitative\"}}, \"height\": 400, \"title\": \"Age Distribution by Gender With Average Duration Stay Info\", \"width\": 700, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-4790c14dd44754b8bbf699bc6eb67f92\": [{\"age_group\": \"20\\u201330\", \"Gender\": \"Female\", \"count\": 522, \"avg_duration\": 16}, {\"age_group\": \"20\\u201330\", \"Gender\": \"Male\", \"count\": 612, \"avg_duration\": 16}, {\"age_group\": \"30\\u201340\", \"Gender\": \"Female\", \"count\": 600, \"avg_duration\": 15}, {\"age_group\": \"30\\u201340\", \"Gender\": \"Male\", \"count\": 557, \"avg_duration\": 15}, {\"age_group\": \"40\\u201350\", \"Gender\": \"Female\", \"count\": 588, \"avg_duration\": 15}, {\"age_group\": \"40\\u201350\", \"Gender\": \"Male\", \"count\": 604, \"avg_duration\": 15}, {\"age_group\": \"50\\u201360\", \"Gender\": \"Female\", \"count\": 592, \"avg_duration\": 16}, {\"age_group\": \"50\\u201360\", \"Gender\": \"Male\", \"count\": 589, \"avg_duration\": 16}, {\"age_group\": \"60\\u201370\", \"Gender\": \"Female\", \"count\": 568, \"avg_duration\": 15}, {\"age_group\": \"60\\u201370\", \"Gender\": \"Male\", \"count\": 571, \"avg_duration\": 15}, {\"age_group\": \"70\\u201380\", \"Gender\": \"Female\", \"count\": 622, \"avg_duration\": 15}, {\"age_group\": \"70\\u201380\", \"Gender\": \"Male\", \"count\": 600, \"avg_duration\": 16}, {\"age_group\": \"80\\u201390\", \"Gender\": \"Female\", \"count\": 378, \"avg_duration\": 16}, {\"age_group\": \"80\\u201390\", \"Gender\": \"Male\", \"count\": 360, \"avg_duration\": 16}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-4790c14dd44754b8bbf699bc6eb67f92\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"field\": \"Gender\", \"scale\": {\"domain\": [\"Female\", \"Male\"], \"range\": [\"#bebada\", \"#fdb462\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"age_group\", \"title\": \"Age Group\", \"type\": \"nominal\"}, {\"field\": \"Gender\", \"type\": \"nominal\"}, {\"field\": \"count\", \"title\": \"Number of Patients\", \"type\": \"quantitative\"}, {\"field\": \"avg_duration\", \"title\": \"Avg. Duration of Stay\", \"type\": \"quantitative\"}], \"x\": {\"axis\": {\"labelAngle\": 0}, \"field\": \"age_group\", \"title\": \"Age Group\", \"type\": \"nominal\"}, \"xOffset\": {\"field\": \"Gender\", \"type\": \"nominal\"}, \"y\": {\"field\": \"count\", \"scale\": {\"zero\": true}, \"title\": \"Number of Patients\", \"type\": \"quantitative\"}}, \"height\": 400, \"title\": \"Age Distribution by Gender With Average Duration Stay Info\", \"width\": 700, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-4790c14dd44754b8bbf699bc6eb67f92\": [{\"age_group\": \"20\\u201330\", \"Gender\": \"Female\", \"count\": 522, \"avg_duration\": 16}, {\"age_group\": \"20\\u201330\", \"Gender\": \"Male\", \"count\": 612, \"avg_duration\": 16}, {\"age_group\": \"30\\u201340\", \"Gender\": \"Female\", \"count\": 600, \"avg_duration\": 15}, {\"age_group\": \"30\\u201340\", \"Gender\": \"Male\", \"count\": 557, \"avg_duration\": 15}, {\"age_group\": \"40\\u201350\", \"Gender\": \"Female\", \"count\": 588, \"avg_duration\": 15}, {\"age_group\": \"40\\u201350\", \"Gender\": \"Male\", \"count\": 604, \"avg_duration\": 15}, {\"age_group\": \"50\\u201360\", \"Gender\": \"Female\", \"count\": 592, \"avg_duration\": 16}, {\"age_group\": \"50\\u201360\", \"Gender\": \"Male\", \"count\": 589, \"avg_duration\": 16}, {\"age_group\": \"60\\u201370\", \"Gender\": \"Female\", \"count\": 568, \"avg_duration\": 15}, {\"age_group\": \"60\\u201370\", \"Gender\": \"Male\", \"count\": 571, \"avg_duration\": 15}, {\"age_group\": \"70\\u201380\", \"Gender\": \"Female\", \"count\": 622, \"avg_duration\": 15}, {\"age_group\": \"70\\u201380\", \"Gender\": \"Male\", \"count\": 600, \"avg_duration\": 16}, {\"age_group\": \"80\\u201390\", \"Gender\": \"Female\", \"count\": 378, \"avg_duration\": 16}, {\"age_group\": \"80\\u201390\", \"Gender\": \"Male\", \"count\": 360, \"avg_duration\": 16}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -114,11 +112,14 @@
     "    avg_duration=('Duration of Stay', lambda x: round(x.mean())),\n",
     ").reset_index()\n",
     "\n",
+    "color_map = {'Female': '#bebada',\n",
+    "             'Male': '#fdb462'}\n",
+    "\n",
     "chart = alt.Chart(agg_df).mark_bar().encode(\n",
     "    x=alt.X('age_group:N', title='Age Group', axis=alt.Axis(labelAngle=0)),\n",
     "    xOffset='Gender:N',  # makes the bars side-by-side\n",
     "    y=alt.Y('count:Q', title='Number of Patients', scale=alt.Scale(zero=True)),\n",
-    "    color=alt.Color('Gender:N'),\n",
+    "    color=alt.Color('Gender:N', scale=alt.Scale(domain=list(color_map.keys()), range=list(color_map.values()))),\n",
     "    tooltip=[\n",
     "        alt.Tooltip('age_group:N', title='Age Group'),\n",
     "        alt.Tooltip('Gender:N'),\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -145,23 +146,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-86c758dcbe3b4520a98f259f87d0afb7.vega-embed {\n",
+       "  #altair-viz-74b2e93fb2de4b3896364d1a8d1c852f.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-86c758dcbe3b4520a98f259f87d0afb7.vega-embed details,\n",
-       "  #altair-viz-86c758dcbe3b4520a98f259f87d0afb7.vega-embed details summary {\n",
+       "  #altair-viz-74b2e93fb2de4b3896364d1a8d1c852f.vega-embed details,\n",
+       "  #altair-viz-74b2e93fb2de4b3896364d1a8d1c852f.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-86c758dcbe3b4520a98f259f87d0afb7\"></div>\n",
+       "<div id=\"altair-viz-74b2e93fb2de4b3896364d1a8d1c852f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-86c758dcbe3b4520a98f259f87d0afb7\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-86c758dcbe3b4520a98f259f87d0afb7\");\n",
+       "    if (outputDiv.id !== \"altair-viz-74b2e93fb2de4b3896364d1a8d1c852f\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-74b2e93fb2de4b3896364d1a8d1c852f\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -209,7 +210,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-3cc94d015cc23f5459b6862a374b2f38\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"field\": \"Gender\", \"title\": \"Gender\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"Gender\", \"type\": \"nominal\"}, {\"field\": \"result_type\", \"type\": \"nominal\"}, {\"field\": \"Count\", \"type\": \"quantitative\"}], \"x\": {\"axis\": {\"labelAngle\": 0}, \"field\": \"result_type\", \"title\": \"Test Result Type\", \"type\": \"nominal\"}, \"xOffset\": {\"field\": \"Gender\", \"type\": \"nominal\"}, \"y\": {\"field\": \"Count\", \"title\": \"Number of Patients\", \"type\": \"quantitative\"}}, \"height\": 400, \"title\": \"Distribution of Test Result by Gender\", \"width\": 500, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-3cc94d015cc23f5459b6862a374b2f38\": [{\"Gender\": \"Female\", \"result_type\": \"Abnormal\", \"Count\": 1360}, {\"Gender\": \"Female\", \"result_type\": \"Inconclusive\", \"Count\": 1355}, {\"Gender\": \"Female\", \"result_type\": \"Normal\", \"Count\": 1276}, {\"Gender\": \"Male\", \"result_type\": \"Abnormal\", \"Count\": 1369}, {\"Gender\": \"Male\", \"result_type\": \"Inconclusive\", \"Count\": 1301}, {\"Gender\": \"Male\", \"result_type\": \"Normal\", \"Count\": 1339}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-3cc94d015cc23f5459b6862a374b2f38\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"field\": \"Gender\", \"scale\": {\"domain\": [\"Female\", \"Male\"], \"range\": [\"#8dd3c7\", \"#fb8072\"]}, \"title\": \"Gender\", \"type\": \"nominal\"}, \"x\": {\"axis\": {\"labelAngle\": 0}, \"field\": \"result_type\", \"title\": \"Test Result Type\", \"type\": \"nominal\"}, \"xOffset\": {\"field\": \"Gender\", \"type\": \"nominal\"}, \"y\": {\"field\": \"Count\", \"title\": \"Number of Patients\", \"type\": \"quantitative\"}}, \"height\": 400, \"title\": \"Distribution of Test Result by Gender\", \"width\": 500, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-3cc94d015cc23f5459b6862a374b2f38\": [{\"Gender\": \"Female\", \"result_type\": \"Abnormal\", \"Count\": 1360}, {\"Gender\": \"Female\", \"result_type\": \"Inconclusive\", \"Count\": 1355}, {\"Gender\": \"Female\", \"result_type\": \"Normal\", \"Count\": 1276}, {\"Gender\": \"Male\", \"result_type\": \"Abnormal\", \"Count\": 1369}, {\"Gender\": \"Male\", \"result_type\": \"Inconclusive\", \"Count\": 1301}, {\"Gender\": \"Male\", \"result_type\": \"Normal\", \"Count\": 1339}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -223,12 +224,14 @@
    "source": [
     "grouped = df.groupby(['Gender', 'result_type']).size().reset_index(name='Count')\n",
     "\n",
+    "color_map = {'Female': '#8dd3c7',\n",
+    "             'Male': '#fb8072'}\n",
+    "\n",
     "chart = alt.Chart(grouped).mark_bar().encode(\n",
     "    x=alt.X('result_type:N', title='Test Result Type', axis = alt.Axis(labelAngle = 0)),\n",
     "    xOffset='Gender:N', \n",
     "    y=alt.Y('Count:Q', title='Number of Patients'),\n",
-    "    color=alt.Color('Gender:N', title='Gender'),\n",
-    "    tooltip=['Gender', 'result_type', 'Count']\n",
+    "    color=alt.Color('Gender:N', title='Gender', scale=alt.Scale(domain=list(color_map.keys()), range=list(color_map.values()))),\n",
     ").properties(\n",
     "    title='Distribution of Test Result by Gender',\n",
     "    width=500,\n",
@@ -242,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv3.12",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
