--- a/april_visuals.ipynb
+++ b/april_visuals.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0p/dk8trws57lsg771k9ktt6kh80000gn/T/ipykernel_18785/2650201601.py:14: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  agg_df = df.groupby(['age_group', 'Gender']).agg(\n"
+      "C:\\Users\\april\\AppData\\Local\\Temp\\ipykernel_54956\\2650201601.py:14: FutureWarning:\n",
+      "\n",
+      "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "\n"
      ]
     },
     {
@@ -18,23 +20,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6.vega-embed {\n",
+       "  #altair-viz-f8d5d58c745645acb1755816a4e4f63e.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6.vega-embed details,\n",
-       "  #altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6.vega-embed details summary {\n",
+       "  #altair-viz-f8d5d58c745645acb1755816a4e4f63e.vega-embed details,\n",
+       "  #altair-viz-f8d5d58c745645acb1755816a4e4f63e.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6\"></div>\n",
+       "<div id=\"altair-viz-f8d5d58c745645acb1755816a4e4f63e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-df1eff9f32544b8b8c51c8fb7edf3db6\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f8d5d58c745645acb1755816a4e4f63e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f8d5d58c745645acb1755816a4e4f63e\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -146,23 +148,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-74b2e93fb2de4b3896364d1a8d1c852f.vega-embed {\n",
+       "  #altair-viz-04e475ce7b59422098c1aafcf3917c62.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-74b2e93fb2de4b3896364d1a8d1c852f.vega-embed details,\n",
-       "  #altair-viz-74b2e93fb2de4b3896364d1a8d1c852f.vega-embed details summary {\n",
+       "  #altair-viz-04e475ce7b59422098c1aafcf3917c62.vega-embed details,\n",
+       "  #altair-viz-04e475ce7b59422098c1aafcf3917c62.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-74b2e93fb2de4b3896364d1a8d1c852f\"></div>\n",
+       "<div id=\"altair-viz-04e475ce7b59422098c1aafcf3917c62\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-74b2e93fb2de4b3896364d1a8d1c852f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-74b2e93fb2de4b3896364d1a8d1c852f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-04e475ce7b59422098c1aafcf3917c62\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-04e475ce7b59422098c1aafcf3917c62\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
