--- a/sameera_visuals.ipynb
+++ b/sameera_visuals.ipynb
@@ -104,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv3.12",
    "language": "python",
    "name": "python3"
   },
