updated visual with fonts

--- a/sameera_visuals_updated-2.ipynb
+++ b/sameera_visuals_updated-2.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "319af965-e18b-4b24-96e9-7c2e21759a98",
    "metadata": {},
    "outputs": [
@@ -187,11 +187,15 @@
     "    path=['Medical Condition', 'Medication'],\n",
     "    values='Count',\n",
     "    color='Medication',  # <-- THIS IS THE CHANGE\n",
-    "    color_discrete_sequence=px.colors.qualitative.Set3,\n",
-    "    title=\"Medication Preference by Medical Condition\"\n",
+    "    color_discrete_sequence=px.colors.qualitative.Set3\n",
     ")\n",
     "\n",
     "fig.update_layout(\n",
+    "     font=dict(\n",
+    "            family=\"sans-serif\",\n",
+    "            size=11, \n",
+    "            color=\"black\"\n",
+    "    ),\n",
     "    margin=dict(l=20, r=200, t=50, b=50) \n",
     ")\n",
     "\n",
