--- a/sameera_visuals_updated-2.ipynb
+++ b/sameera_visuals_updated-2.ipynb
@@ -191,6 +191,7 @@
     ")\n",
     "\n",
     "fig.update_layout(\n",
+    "    title=None,\n",
     "     font=dict(\n",
     "            family=\"sans-serif\",\n",
     "            size=11, \n",
