fixed spacing again

--- a/sameera_visuals_updated-2.ipynb
+++ b/sameera_visuals_updated-2.ipynb
@@ -200,7 +200,7 @@
     "    margin=dict(l=20, r=200, t=50, b=50) \n",
     ")\n",
     "\n",
-    "fig.write_html(\"treemap_updated.html\")\n",
+    "fig.write_html(\"treemap_final.html\")\n",
     "\n",
     "\n",
     "fig.show()"
